// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmDialogBox snapshots tests renders component with customised locale 1`] = `
<WithStyles(Dialog)
  open={false}
  style={
    Object {
      "padding": 6,
    }
  }
>
  <WithStyles(DialogTitle)>
    ENG: Confirmation
  </WithStyles(DialogTitle)>
  <WithStyles(DialogContent)>
    <WithStyles(DialogContentText)>
      ENG: Are you sure?
    </WithStyles(DialogContentText)>
  </WithStyles(DialogContent)>
  <WithStyles(DialogActions)>
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={false}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={true}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          xs={true}
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          autoFocus={true}
          color="primary"
          fullWidth={true}
          onClick={[Function]}
        >
          ENG: Yes
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          ENG: Maybe
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          color="primary"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          ENG: No
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;

exports[`ConfirmDialogBox snapshots tests renders component with yes 1`] = `
<WithStyles(Dialog)
  open={false}
  style={
    Object {
      "padding": 6,
    }
  }
>
  <WithStyles(DialogTitle)>
    Confirmation
  </WithStyles(DialogTitle)>
  <WithStyles(DialogContent)>
    <WithStyles(DialogContentText)>
      Are you sure?
    </WithStyles(DialogContentText)>
  </WithStyles(DialogContent)>
  <WithStyles(DialogActions)>
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={false}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={true}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          xs={true}
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          autoFocus={true}
          color="primary"
          fullWidth={true}
          onClick={[Function]}
        >
          Yes
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;

exports[`ConfirmDialogBox snapshots tests renders component with yes/no buttons 1`] = `
<WithStyles(Dialog)
  open={false}
  style={
    Object {
      "padding": 6,
    }
  }
>
  <WithStyles(DialogTitle)>
    Confirmation
  </WithStyles(DialogTitle)>
  <WithStyles(DialogContent)>
    <WithStyles(DialogContentText)>
      Are you sure?
    </WithStyles(DialogContentText)>
  </WithStyles(DialogContent)>
  <WithStyles(DialogActions)>
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={false}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={true}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          xs={true}
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          autoFocus={true}
          color="primary"
          fullWidth={true}
          onClick={[Function]}
        >
          Yes
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          color="primary"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          No
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;

exports[`ConfirmDialogBox snapshots tests renders component with yes/no/maybe buttons 1`] = `
<WithStyles(Dialog)
  open={false}
  style={
    Object {
      "padding": 6,
    }
  }
>
  <WithStyles(DialogTitle)>
    Confirmation
  </WithStyles(DialogTitle)>
  <WithStyles(DialogContent)>
    <WithStyles(DialogContentText)>
      Are you sure?
    </WithStyles(DialogContentText)>
  </WithStyles(DialogContent)>
  <WithStyles(DialogActions)>
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={false}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={true}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          xs={true}
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          autoFocus={true}
          color="primary"
          fullWidth={true}
          onClick={[Function]}
        >
          Yes
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          Maybe
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          color="primary"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          No
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;

exports[`ConfirmDialogBox snapshots tests should have a proper style generator 1`] = `
Object {
  "alternateActionButtonClass": Object {
    "&:hover": Object {
      "backgroundColor": "test3",
    },
    "backgroundColor": "test2",
    "color": "test4",
  },
}
`;

exports[`ConfirmDialogBox snapshots tests should have a proper style generator 2`] = `
Object {
  "alternateActionButtonClass": Object {
    "&:hover": Object {
      "backgroundColor": undefined,
    },
    "backgroundColor": undefined,
    "color": undefined,
  },
}
`;

exports[`ConfirmDialogBox snapshots tests should have a proper style generator 3`] = `
Object {
  "alternateActionButtonClass": Object {
    "&:hover": Object {
      "backgroundColor": undefined,
    },
    "backgroundColor": undefined,
    "color": undefined,
  },
}
`;

exports[`ConfirmDialogBox snapshots tests should show and hide confirmation dialog 1`] = `
<WithStyles(Dialog)
  open={true}
  style={
    Object {
      "padding": 6,
    }
  }
>
  <WithStyles(DialogTitle)>
    Confirmation
  </WithStyles(DialogTitle)>
  <WithStyles(DialogContent)>
    <WithStyles(DialogContentText)>
      Are you sure?
    </WithStyles(DialogContentText)>
  </WithStyles(DialogContent)>
  <WithStyles(DialogActions)>
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={false}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={true}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          xs={true}
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          autoFocus={true}
          color="primary"
          fullWidth={true}
          onClick={[Function]}
        >
          Yes
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          color="primary"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          No
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;

exports[`ConfirmDialogBox snapshots tests should show and hide confirmation dialog 2`] = `
<WithStyles(Dialog)
  open={false}
  style={
    Object {
      "padding": 6,
    }
  }
>
  <WithStyles(DialogTitle)>
    Confirmation
  </WithStyles(DialogTitle)>
  <WithStyles(DialogContent)>
    <WithStyles(DialogContentText)>
      Are you sure?
    </WithStyles(DialogContentText)>
  </WithStyles(DialogContent)>
  <WithStyles(DialogActions)>
    <WithStyles(Grid)
      container={true}
      spacing={8}
    >
      <Hidden
        implementation="js"
        lgDown={false}
        lgUp={false}
        mdDown={false}
        mdUp={false}
        smDown={false}
        smUp={false}
        xlDown={false}
        xlUp={false}
        xsDown={true}
        xsUp={false}
      >
        <WithStyles(Grid)
          item={true}
          xs={true}
        />
      </Hidden>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          autoFocus={true}
          color="primary"
          fullWidth={true}
          onClick={[Function]}
        >
          Yes
        </WithStyles(Button)>
      </WithStyles(Grid)>
      <WithStyles(Grid)
        item={true}
        sm="auto"
        xs={12}
      >
        <WithStyles(Button)
          color="primary"
          fullWidth={true}
          onClick={[Function]}
          variant="contained"
        >
          No
        </WithStyles(Button)>
      </WithStyles(Grid)>
    </WithStyles(Grid)>
  </WithStyles(DialogActions)>
</WithStyles(Dialog)>
`;
